@@ -10,11 +10,13 @@ xtst = MNIST.xtst
 ytrn = MNIST.ytrn
 ytst = MNIST.ytst
 w0 = similar(ytst, size(ytst,1), 0)
+d0 = 6
+c0 = 1
 
 if true
-xnet = Layer[Poly(c=1f0,d=3f0,w=w0), PercLoss()]
+xnet = Layer[Poly(c=c0,d=d0,w=w0), PercLoss()]
 for i=1:1
-    @time train(xnet, xtst, ytst)
+    @time train(xnet, xtrn, ytrn; iters=100)
     println((i, size(xnet[1].s), 
              accuracy(ytst, predict(xnet, xtst)),
              )) # accuracy(ytrn, predict(xnet, xtrn))))
@@ -24,9 +26,9 @@ end # if false
 if true
 strn = sparse(MNIST.xtrn)
 stst = sparse(MNIST.xtst)
-snet = Layer[Poly(c=1f0,d=3f0,w=w0), PercLoss()]
+snet = Layer[Poly(c=c0,d=d0,w=w0), PercLoss()]
 for i=1:1
-    @time train(snet, stst, ytst)
+    @time train(snet, strn, ytrn; iters=100)
     println((i, size(snet[1].s), 
              accuracy(ytst, predict(snet, stst)),
              )) # accuracy(ytrn, predict(snet, strn))))
@@ -35,9 +37,9 @@ end # if false
 
 if false # mmul, hcat, ctranspose do not work
 KUnet.atype(CudaArray)
-cnet = Layer[Poly(c=1f0,d=3f0,w=CudaArray(w0)), PercLoss()]
+cnet = Layer[Poly(c=c0,d=d0,w=CudaArray(w0)), PercLoss()]
 for i=1:1
-    @time train(cnet, xtst, ytst; iters=1)
+    @time train(cnet, xtrn, ytrn; iters=100)
     println((i, size(cnet[1].s), 
              accuracy(ytst, predict(cnet, xtst)),
              )) # accuracy(ytrn, predict(cnet, xtrn))))
