@@ -1,9 +1,17 @@
+2015-06-09    <dyuret@ku.edu.tr>
+
+	* src/kernel.jl: Poly kernels working with sparse/full arrays.
+	* DONE: Try on CudaArray: mul, xpose, hcat vs does not work.
+	* TODO: Try on SparseCudaArray (cpu sparse is 5x slower than cpu
+	full on mnist)
+	* TODO: rbf kernel
+
 2015-06-03    <dyuret@ku.edu.tr>
 
 	* src/percloss.jl: Added perceptron loss.  A multiclass perceptron
 	is just Mmul followed by PercLoss.
 	* DONE: write unit test for PercLoss.
-	* TODO: implement and test kernel perceptron next.
+	* DONE: implement and test kernel perceptron next.
 	* TODO: test subarray and concat with full/sparse on cpu/gpu.
 	* TODO:	test KUnet with full/sparse, cpu/gpu, Float32/64
 	* TODO: test onur's 4D code.
